--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "debug": "npx nodemon src/app.ts"
+    "dev": "npx nodemon src/app.ts"
   },
   "repository": {
     "type": "git",
