--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tool to scrap public domain books on the web and convert then to EPUB",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx jest",
     "dev": "npx nodemon src/app.ts"
   },
   "repository": {
@@ -25,8 +25,10 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.0",
     "jest": "^29.2.1",
     "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
