--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Tool to scrap public domain books on the web and convert then to EPUB",
   "main": "index.js",
   "scripts": {
-    "test": "npx jest",
-    "dev": "npx nodemon src/app.ts"
+    "test": "npx jest --watchAll --detectOpenHandles",
+    "dev": "npx nodemon src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "@types/jest": "^29.2.0",
     "jest": "^29.2.1",
     "nodemon": "^2.0.20",
+    "supertest": "^6.3.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
