--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/laurolyra/epubfier#readme",
   "dependencies": {
+    "@types/cheerio": "^0.22.31",
     "@types/express": "^4.17.14",
     "axios": "^1.1.3",
     "cheerio": "^1.0.0-rc.12",
